<resources>
    <string name="app_name">NewsReader</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_24_app_title">News 24</string>
    <string name="img_des_feed">ảnh cho newsfeed</string>
    <string name="news_feed_title">news_feed_title</string>
    <string name="news_feed_src">source</string>
    <string name="news_feed_topic">topic</string>
    <string name="news_feed_date">ngày đăng</string>
    <string name="settings">Settings</string>

    <string name="latest">Latest</string>
    <string name="world">World</string>
    <string name="business">Business</string>
    <string name="technology">Technology</string>
    <string name="entertainment">Entertainment</string>
    <string name="sports">Sports</string>
    <string name="science">Science</string>
    <string name="health">Health</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="interests">Interests</string>
    <string name="search">Search</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="about">About</string>
    <string name="close">Close</string>
    <string name="language">Language</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="cant_connect">Can\'t connect to server</string>
    <string name="error">Error</string>
    <string name="sources">Sources</string>
    <string name="ThanhNien">Thanh Niên</string>
    <string name="VnExpress">VnExpress</string>
    <string name="TuoiTre">Tuổi Trẻ</string>
    <string name="VTC">Báo VTC</string>
    <string name="DocBao">DocBao.vn</string>
    <string name = "no_internet_message">Please check your internet connection and try again</string>
    <string name="connected">Connected</string>
    <string name="loading">Loading...</string>
    <string name="football">Football</string>
    <string name="law">Law</string>
    <string name="education">Education</string>
    <string name="car">Car</string>
    <string name="TheThao247">Thể Thao 247</string>
    <string name="TienPhong">Tiền Phong</string>
    <string name="NguoiLaoDong">Người Lao Động</string>
</resources>