<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp">

    <!--TODO: Mỗi cái textview trong settings (ngoại trừ cái text "Settings" đầu tiên) là cần code 1 cái onClickListener -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:fontFamily="@font/noto_sans_bold"
        android:textStyle="bold"
        style="@style/news_feed_title_text"
        android:textSize="@dimen/_13ssp"/>

    <LinearLayout
        android:layout_marginTop="@dimen/_13sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settings_item_interests"
            style="@style/news_feed_title_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:clickable="true"
            android:drawableStart="@drawable/star_icon"
            android:drawableEnd="@drawable/right_arrow"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/noto_sans_med"
            android:gravity="center_vertical"
            android:text="@string/interests"
            android:textSize="@dimen/_10ssp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_grey"
            android:layout_marginVertical="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/settings_item_sources"
            style="@style/news_feed_title_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:clickable="true"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/noto_sans_med"
            android:gravity="center_vertical"
            android:text="@string/sources"
            android:textSize="@dimen/_10ssp"
            app:drawableStartCompat="@drawable/star_icon"
            android:focusable="true"
            app:drawableEndCompat="@drawable/right_arrow" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_grey"
            android:layout_marginVertical="@dimen/_10sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/search_item_dark"
                style="@style/news_feed_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:drawableStart="@drawable/darkmode_icon"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/noto_sans_med"
                android:text="@string/dark_mode"
                android:textSize="@dimen/_10ssp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/dark_switch"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:theme="@style/Theme.Switch"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_grey"
            android:layout_marginVertical="15dp"/>

        <TextView
            android:id="@+id/settings_item_language"
            style="@style/news_feed_title_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:clickable="true"
            android:drawableStart="@drawable/question_mark"
            android:drawableEnd="@drawable/right_arrow"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/noto_sans_med"
            android:gravity="center|left"
            android:text="@string/language"
            android:textSize="@dimen/_10ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_grey"
            android:layout_marginVertical="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/settings_item_about"
            style="@style/news_feed_title_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:clickable="true"
            android:drawableStart="@drawable/question_mark"
            android:drawableEnd="@drawable/right_arrow"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/noto_sans_med"
            android:gravity="center_vertical"
            android:text="@string/about"
            android:textSize="@dimen/_10ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_grey"
            android:layout_marginVertical="@dimen/_10sdp"/>


    </LinearLayout>

</LinearLayout>